# generic-api-cache

./: Cargo.toml  Config.toml  Readme.md  docker-compose.yaml  log4rs.yml
src/: logger.rs  main.rs  routes.rs
