[package]
name = "generic-api-cache"
version = "0.1.0"
edition = "2018"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-openssl = "0.9"
openssl = "0.10"
config = "0.11"
log = "0.4"
r2d2 = "0.8"
r2d2-memcache = "0.6"
color-eyre = "0.5"
lazy_static = "1.4"
http = "0.2"
bytes = "1"
thiserror = "1"
memcache = "0.15"
http-serde = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bincode]
version = "1"

[dependencies.log4rs]
version = "1"
features = ["gzip"]
